testing/tests/ui/num-suffix.stderr
error: unknown integer suffix `x`
 --> <source attribute>:1:3
       "0x0x }}"
 --> tests/ui/num-suffix.rs:7:14
  |
7 |     source = "{{ 0x0x }}",
  |              ^^^^^^^^^^^^

error: unknown float suffix `f127`
 --> <source attribute>:1:3
       "0.0_f127 }}"
  --> tests/ui/num-suffix.rs:14:14
   |
14 |     source = "{{ 0.0_f127 }}",
   |              ^^^^^^^^^^^^^^^^

error: unknown number suffix `u321`
 --> <source attribute>:1:3
       "654u321 }}"
  --> tests/ui/num-suffix.rs:21:14
   |
21 |     source = "{{ 654u321 }}",
   |              ^^^^^^^^^^^^^^^
